--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <a-scene mindar-image="imageTargetSrc: ./targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights">
     <a-assets>
-      <img id="apple" src="apple.webp" crossorigin="anonymous">
+      <img id="apple" src="apple.jpg" crossorigin="anonymous">
     <a-asset-item id="car" src="scene.gltf"></a-asset-item>
     </a-assets>
 
